# trawl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESEARCH.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_cases.yaml  bge_m3_reader_gap_diag.py  bm25_id_aware_sweep.py  c5_page_size_measure.py  c6_rrf_k_sweep.py  cjk_per_doc_cap_validation.py  hybrid_default_on_spike.py  hyde_compound_id_sweep.py  longform_retrieval_cost_measure.py  mdn_reranker_diag.py  pdf_backend_cases.yaml  pdf_backend_comparison.py  profile_eval.py  profile_eval_cases.yaml  qwen3_embedding_swap.py  reader_comparison.py  reader_comparison_cases.yaml  reranker_mdn_sporadic_diag.py  reranker_stability_diag.py  run_benchmark.py  shadow_dom_catalog.py  shadow_dom_sweep.py  stackexchange_extraction_diag.py
benchmarks/wcxb/: ATTRIBUTION.md  README.md  __init__.py  aggregate.py  evaluate.py  fetch.py  manifest.json  run.py
docs/: scrapling-analysis.md  stability-speed-improvement-report-2026-05-04.md
examples/: claude_code_config.json  mcp_gateway_config.yaml
src/trawl/: __init__.py  bm25.py  chunking.py  contextual.py  diagnostics.py  embedding_cache.py  enrichment.py  extraction.py  fetch_cache.py  host_stats.py  (+6 more)
tests/: _audit_record_cases.py  conftest.py  test_agent_patterns.py  test_agent_patterns_assertions.py  test_bm25.py  test_cases.yaml  test_contextual.py  test_contextual_auto.py  test_diagnostics.py  test_embedding_cache.py  test_enrichment.py  test_extract_title.py  test_extraction.py  test_fetch_cache.py  test_github_fetcher.py  test_host_stats.py  test_mcp_auto_profile.py  test_mcp_http.py  test_mcp_profile.py  test_mcp_queue_separation.py  test_mcp_server.py  test_passthrough.py  test_pdf_backends.py  test_pdf_probe.py  test_pipeline.py  test_pipeline_cache.py  test_pipeline_contextual.py  test_pipeline_embedding_cache_metrics.py  test_profile_smoke.py  test_profile_transfer.py  test_profile_transfer_smoke.py  test_profiles.py  test_reader_comparison.py  test_reranking_cap.py  test_reranking_format.py  test_retrieval_bm25_fallback.py  test_retrieval_chunk_budget.py  test_retrieval_contextual.py  test_retrieval_embedding_cache.py  test_retrieval_hybrid.py  (+9 more)
(+89 files in other folders)
